--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "node server.js"
   },
   "author": "Fumin tech",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.4.5"
+  }
 }
